tests/baselines/reference/getJavaScriptSyntacticDiagnostics8.baseline
// === Syntax Diagnostics ===
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics8.ts':
/tests/cases/fourslash/a.js(1,6): error TS8008: Type aliases can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    type a = b;
         ~
!!! error TS8008: Type aliases can only be used in TypeScript files.